# go/api/v1/payment.pb.validate.go
@@ -126,8 +126,6 @@ func (m *PaymentCustomer) validate(all bool) error {
 		}
 	}
 
-	// no validation rules for Admitted
-
 	if m.Name != nil {
 		// no validation rules for Name
 	}
