# go/api/v1/user.pb.validate.go
@@ -100,6 +100,8 @@ func (m *User) validate(all bool) error {
 
 	}
 
+	// no validation rules for Admitted
+
 	if len(errors) > 0 {
 		return UserMultiError(errors)
 	}
